# robolator

./: .gitmodules  CMakeLists.txt  main.cpp
V2/: WORK2.V2  WORK3.V2  WORK4.V2  WORK5.V2  WORK6.V2
shaders/: betterray.frag  color.frag  ray.frag
source/: Controller.h  Robot.cpp  Robot.h  Robotmodel.cpp  Robotmodel.h  main.cpp
